--- a/services/Dataextraction/api/BusinessData.yaml
+++ b/services/Dataextraction/api/BusinessData.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
   title: Data Extraction API
-  description: The DataExtraction API datddga from CXone for external reporting purposes.  For example, you can extract QM Workflow data. You must generate a key in order to use this API.
+  description: The DataExtraction API dgdg from CXone for external reporting purposes.  For example, you can extract QM Workflow data. You must generate a key in order to use this API.
   contact:
     email: R&DApiTeam@niceincontact.com
   license:
